# spacecraft-game

./: .clang-format  CMakeLists.txt  README.md
resource/: application.qrc
src/: Airplane.cpp  Airplane.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  CircleAudioPlayer.cpp  CircleAudioPlayer.h  CuteSoundPlayer.cpp  CuteSoundPlayer.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  KeyboardController.cpp  KeyboardController.h  LifeBar.cpp  LifeBar.h  MyMediaPlayer.cpp  MyMediaPlayer.h  MyRect.cpp  MyRect.h  Score.cpp  Score.h  Spacecraft.cpp  Spacecraft.h  StaticExplosion.cpp  StaticExplosion.h  StaticStuff.cpp  StaticStuff.h  common.h  main.cpp
